added buttons and assigned data

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+
+
+    <section class="calculator">
+        <form>
+            <input class="screen" type="text">
+
+        </form>
+
+        <div class="buttons">
+            <button type="button" class="btn btn-yellow" data-num="*">*</button>
+            <button type="button" class="btn btn-yellow" data-num="/">/</button>
+            <button type="button" class="btn btn-yellow" data-num="-">-</button>
+            <button type="button" class="btn btn-yellow" data-num="+">+</button>
+
+
+        </div>
+    </section>
     
 
 <script src="./app.js"></script>
